--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"></script>
 <!--     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script> -->
 
-    <script type="text/javascript" src="assets/javascript/app.js">
-
-    </script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
+    <script src="js/noframework.waypoints.min.js"></script>
 
 </body>
 </html>
