index link fix with waypoints js and more test with waypoint

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!--     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script> -->
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
-    <script src="js/noframework.waypoints.min.js"></script>
+    <script src="assets/javascript/noframework.waypoints.min.js"></script>
 
 </body>
 </html>
