--- a/index.html
+++ b/index.html
@@ -11,29 +11,17 @@
     
 </head>
 <body>
-	
-  <!--header-->
-  <div class="header">
 
-  </div><!--end of header-->
 
 <!--body and summary jumbotron has background image-->
-  <div class="jumbotron">
-            <div class="container">
-
-                <div>
-                  <h1>0123 ABC abc Xx Nn Zz Hh Oo</h1>
-                  <p>0123 ABC abc Xx Nn Zz Hh Oo</p>
-                </div>
-                        
+  <div id="container">
+            <div id="block" class="original">
             </div>
   </div> <!--end of jumbotron has background image-->
 
-<div class="footer">
-  <div class="container text-center">
+<footer>
       <p>&copy; Copyright 2017 Jon Salamat</p>
-  </div>
-</div>
+</footer>
   
  
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.js"></script>
